src/objects/SDC__MasterRules_Stratus__c.object
<CustomObject>
    <fields>
        <fullName>SDC__EnableDelta__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Use Score Delta</description>
        <inlineHelpText>Use Score Delta</inlineHelpText>
        <label>EnableDelta_Stratus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDC__ObjectType__c</fullName>
        <label>ObjectType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDC__RuleData_Stratus__c</fullName>
        <description>Rule Data Stratus</description>
        <label>RuleData_Stratus</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDC__RuleName_Stratus__c</fullName>
        <label>RuleName_Stratus</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDC__ScoreDelta_Stratus__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ScoreDelta_Stratus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MasterRules_Stratus</label>
    <nameField>
        <label>Rules Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>